--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=chimki
 POSTGRES_DATABASE=talkietown_db
 POSTGRES_PORT=5432
+JWT_SECRET=talkietown_secret_key_2024
