--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-POSTGRES_HOST=localhost
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=chimki
-POSTGRES_DATABASE=talkietown_db
-POSTGRES_PORT=5432
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=chimki
+DB_DATABASE=talkietown_db
 JWT_SECRET=talkietown_secret_key_2024
+JWT_EXPIRATION=24h
